# BinaryKnights

./: README.md
flutter_secure_enclave/app/: pubspec.yaml
flutter_secure_enclave/app/ios/Runner.xcodeproj/: project.pbxproj
flutter_secure_enclave/app/lib/: main.dart  main2.dart
flutter_secure_enclave/secure_enclave-0.1.1/.dart_tool/: package_config.json  package_config_subset
flutter_secure_enclave/secure_enclave-0.1.1/.dart_tool/extension_discovery/: vs_code.json
flutter_secure_enclave/secure_enclave-0.1.1/example/: .flutter-plugins  .flutter-plugins-dependencies
flutter_secure_enclave/secure_enclave-0.1.1/example/.dart_tool/: package_config.json  package_config_subset
flutter_secure_enclave/secure_enclave-0.1.1/example/.dart_tool/extension_discovery/: vs_code.json
flutter_secure_enclave/secure_enclave-0.1.1/example/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
flutter_secure_enclave/secure_enclave-0.1.1/example/ios/Runner.xcodeproj/: project.pbxproj
implemented_CAL_environment/: Cargo.toml
implemented_CAL_environment/src/: main.rs
my_app/: pubspec.yaml
my_app/ios/Runner/: AppDelegate.swift  bridge_generated.h
my_app/ios/Runner.xcodeproj/: project.pbxproj
my_app/lib/: bridge_definitions.dart  bridge_generated.dart  main.dart
my_app/macos/Runner.xcodeproj/: project.pbxproj
my_app/native/: Cargo.toml
my_app/native/binaryknights_rust_crypto/src/tpm/macos/main/: build.rs
my_app/native/src/: api.rs  main.rs
proto/: Cargo.toml
proto/src/: main.rs
proto/ui/: appwindow.slint
(+29 files in other folders)
