[package]
name = "my-project"
version = "0.1.0"
authors = ["ZombiesKing <45457898+ZombiesKing@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"
crypto-layer = {version="0.1.0", path="../implemented_CAL_environment/binaryknights_rust_crypto", features=["macos", "tpm"]}

[build-dependencies]
slint-build = "1.6"
