[package]
name = "my_app"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_app"
crate-type = ["staticlib"]

[dependencies]
flutter_rust_bridge = "=1.80.1"
flutter_rust_bridge_macros = "=1.80.1"
crypto-layer = {version="0.1.0", edition = "2021", path="binaryknights_rust_crypto", features=["macos", "tpm"]}
apple-secure-enclave-bindings = {edition = "2021", version = "0.1.0", path="binaryknights_rust_crypto/src/tpm/macos/main", name="main"}
